--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
